# p2p

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  client.cpp
client/: central_server.cpp  central_server.h
cmake/: FindGRPC.cmake  FindProtobufWithTargets.cmake
proto/: central.proto  comm.proto  p2p.proto
src/: central.cpp  central.h  central_server.cpp  central_server.h  client.cpp  server.cpp  zmq_helper.cpp  zmq_helper.h
src/central/: central.cpp  central.h  main.cpp  server.cpp
src/client/: central_client.cpp  central_client.h  cli.cpp  cli.h  cli_cmd.cpp  cli_cmd.h  client.cpp  main.cpp  utils.cpp  utils.h
tests/: CMakeLists.txt  central.cpp  main.cpp
